--- a/assignments/assignment-3/styles/styles.css
+++ b/assignments/assignment-3/styles/styles.css
@@ -1,53 +1,112 @@
-main{
-    background-color: black;
+:root{
+    --primary-color:#CADCFC;
+    --secondary-color: #00246B;
+    --border-radius:10px;
+    --font-heading:'Markazi Text',serif;
+    --font-body:'Faustina',serif;
 }
-body{
-    margin:0;
-}
-h1{       
-    margin-top:0;     
-    font-family: 'Aileron', sans-serif;
-    color: #39FF14;
-    display: block;
-    margin:0 auto;
-    text-align: center;
 
-}
-h2{
-    text-align: center;
-    color: #39FF14;
-}
-h3{
-    color: #39FF14;
-}
+.markazi-text-body-font {
+    font-family: "Markazi Text", serif;
+    font-optical-sizing: auto;
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  .faustina-head-font {
+    font-family: "Faustina", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
 
 img.rounded {
     object-fit: cover;
     border-radius:50%;
-    height:100px;
-    width: 100px;
+    height:200px;
+    width: 200px;
     
 }
+html, body {
+    margin: 0;
+    padding: 0;
+}
+header{
+    font-family: var(--font-heading);
+    background-color: var(--primary-color);
+    display:grid;
+    grid-template-rows: 200px,400px, 100px;
+    place-items: center;
+    
+}
+/*adds border to header image*/
+header >img{
+    border-style: solid;
+    border-color:var(--secondary-color);  
+    margin-bottom: 30px;
+}
 
-img{
-    display: block;
-    margin:0 auto;
+h1{
+    font-size: 60px;
+}
+.secondary-background{
+    background-color: var(--secondary-color);
+}
+.top-bar{
+    background-color: var(--secondary-color);
+    color: white;
+    width:100%;
+}
+h2{
+    font-family:var(--font-heading);
+    font-size: 40px;
 }
 p{
-    text-align: center;
-    color:#FF3131;
+    font-family: var(--font-body);
 }
-ol{
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    color:#FF3131;
+#aboutme{
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    row-gap: 5px;
+
 }
-ul{
-    color:#FF3131;
+
+nav{
+    background-color: var(--primary-color);
 }
-table{
-    margin-left: auto;
-    margin-right: auto;
-    color:#FF3131;
+nav>ul{
+    list-style-type: none;
+    display:flex; 
+    place-content: center;
+}
+
+nav>ul>li{
+    padding: 15px;
+    margin:20px;
+    border-radius: var(--border-radius);
+    background-color: var(--secondary-color);
+    box-shadow: 0 5px 5px rgb(35, 35, 35);
+    width:120px;
+    position:relative;
+
+    transition:
+      top 0.3s linear,
+      box-shadow 0.3s linear,
+      
+
+    
+    
+    
+}
+nav>ul>li:hover{
+    top:-5px;
+    box-shadow: 0 7px 7px rgb(35, 35, 35);
+}
+nav>ul>li>a{
+    color:rgb(255, 255, 255);
+    text-decoration: none;
+    display:grid;
+    place-items: center;
+    
 }
