--- a/assignments/assignment-3/styles/styles.css
+++ b/assignments/assignment-3/styles/styles.css
@@ -64,7 +64,7 @@ h2{
     font-family:var(--font-heading);
     font-size: 40px;
     margin:0;
-    padding:0;
+    padding-bottom:40px;
 }
 h3{
     font-family:var(--font-heading);
@@ -89,7 +89,7 @@ p{
 
 nav{
     background-color: var(--primary-color);
-    border-radius: var(--border-radius);
+    
     margin:0;
     padding:0;
 }
@@ -158,6 +158,7 @@ section{
 
 #sfsu>div>nav,#dvc>div>nav{
     background-color: none;
+    border-radius: var(--border-radius);
 }
 #sfsu>div>nav>ul,#dvc>div>nav>ul{
     display:flex;
@@ -191,18 +192,76 @@ section{
     color: white;
     padding-bottom: 30px;
     padding-left: var(--left-padding);
+    padding-bottom: 100px;
+    
+    
 
 }
-#projects{
-    background: linear-gradient(0deg, rgba(202,220,252,1) 0%, rgba(0,36,107,1) 35%);
+#extracurricular>ul{
+    list-style-type: none;
+    display:flex;
+    justify-content: space-evenly;
+    background-color: var(--primary-color);
+    padding:20px;
+    border-radius: var(--border-radius);
+    max-width: 900px;
+    
+    
+    
+}
+#extracurricular>ul>li{
+    border:solid;
+    border-color: var(--secondary-color);
+    border-radius: var(--border-radius);
+    background-color: var(--secondary-color);
+    padding:30px;
+
+    box-shadow: 0 5px 5px rgb(35, 35, 35);
+    position:relative;
+
+    transition:
+      top 0.3s linear,
+      box-shadow 0.3s linear,
+    
+    
+}
+#extracurricular>ul>li:hover{
+    top:-5px;
+    box-shadow: 0 7px 7px rgb(35, 35, 35);
+}
+#projects>h2{
+    color:white;
+    padding-left: var(--left-padding);
+}
+#projects>div{
+    background: linear-gradient(0deg, rgba(202,220,252,1) 0%, rgba(0,36,107,1) 75%);
     color:white;
     padding-bottom:50px;
     padding-left: var(--left-padding);
+    display:flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding:20px;
+}
+#projects>div>article{
+    border:solid;
+    border-color:white;
+    display:grid;
+    place-items: center;
+    border-radius: var(--border-radius);
+    margin:20px;
+    padding:30px;
+    padding-right:30px;
+    max-width: 700px;
+    box-shadow: 0 5px 5px rgb(35, 35, 35);
+
+    
 }
 #contact{
     background: linear-gradient(180deg, rgba(202,220,252,1) 0%, rgba(0,36,107,1) 35%);
     margin: 0;
     padding: 0;
+    color:white;
 
 }
 form>div{
