--- a/assignments/assignment-3/styles/styles.css
+++ b/assignments/assignment-3/styles/styles.css
@@ -6,7 +6,7 @@
     --font-body:'Faustina',serif;
     --left-padding:40px;
 }
-
+/* Importing fonts*/
 .markazi-text-body-font {
     font-family: "Markazi Text", serif;
     font-optical-sizing: auto;
@@ -21,6 +21,7 @@
     font-style: normal;
   }
 
+/*rounding class for images*/
 img.rounded {
     object-fit: cover;
     border-radius:50%;
@@ -28,6 +29,7 @@ img.rounded {
     width: 200px;
     
 }
+
 html, body {
     margin: 0;
     padding: 0;
@@ -74,6 +76,8 @@ p{
     font-family: var(--font-body);
     padding-left: var(--left-padding);
 }
+
+/*about me set up*/
 #aboutme{
     display: flex;
     flex-direction: column;
@@ -87,6 +91,7 @@ p{
     
 }
 
+/*nav links set up*/
 nav{
     background-color: var(--primary-color);
     
@@ -98,6 +103,7 @@ nav>ul{
     display:flex; 
     place-content: center;
     flex-wrap: wrap;
+    margin:0;
     
     
 }
@@ -120,6 +126,7 @@ nav>ul>li{
     
     
 }
+
 nav>ul>li:hover{
     top:-5px;
     box-shadow: 0 7px 7px rgb(35, 35, 35);
@@ -131,9 +138,7 @@ nav>ul>li>a{
     place-items: center;
     
 }
-ul{
-    margin:0;
-}
+
 section{
     margin: 0;
     padding: 0;
@@ -145,6 +150,7 @@ section{
     border-top:0;
     background: linear-gradient(180deg, rgba(202,220,252,1) 0%, rgba(0,36,107,1) 35%);
 }
+
 
 #sfsu,#dvc{
     display: flex;
@@ -270,6 +276,7 @@ table,th,td{
     flex-wrap: wrap;
     padding:20px;
 }
+
 #projects>div>article{
     border:solid;
     border-color:white;
