--- a/assignments/assignment-3/styles/styles.css
+++ b/assignments/assignment-3/styles/styles.css
@@ -151,7 +151,7 @@ section{
     background: linear-gradient(180deg, rgba(202,220,252,1) 0%, rgba(0,36,107,1) 35%);
 }
 
-
+/*  wanted links to match nav   */
 #sfsu,#dvc{
     display: flex;
     flex-wrap:wrap;    
