--- a/assignments/assignment-3/styles/styles.css
+++ b/assignments/assignment-3/styles/styles.css
@@ -9,14 +9,12 @@
 /* Importing fonts*/
 .markazi-text-body-font {
     font-family: "Markazi Text", serif;
-    font-optical-sizing: auto;
     font-weight: normal;
     font-style: normal;
   }
 
   .faustina-head-font {
     font-family: "Faustina", serif;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
   }
@@ -40,7 +38,7 @@ header{
     font-family: var(--font-heading);
     background-color: var(--primary-color);
     display:grid;
-    grid-template-rows: 200px,400px, 100px;
+    grid-template-rows: 200px 400px 100px;
     place-items: center;
     
 }
@@ -119,11 +117,8 @@ nav>ul>li{
 
     transition:
       top 0.3s linear,
-      box-shadow 0.3s linear,
-      
+      box-shadow 0.3s linear
 
-    
-    
     
 }
 
@@ -168,13 +163,12 @@ section{
 }
 
 #sfsu>div>nav,#dvc>div>nav{
-    background-color: none;
+    
     border-radius: var(--border-radius);
 }
 #sfsu>div>nav>ul,#dvc>div>nav>ul{
     display:flex;
     padding: 15px;
-    background-color: none;
     border-radius: var(--border-radius);
     
     box-shadow: 0 5px 5px rgb(35, 35, 35);
@@ -182,7 +176,7 @@ section{
 
     transition:
       top 0.3s linear,
-      box-shadow 0.3s linear,
+      box-shadow 0.3s linear
 }
 
 #experience{
@@ -254,7 +248,7 @@ table,th,td{
 
     transition:
       top 0.3s linear,
-      box-shadow 0.3s linear,
+      box-shadow 0.3s linear
     
     
 }
