--- a/assignments/assignment-4/styles/calc_style.css
+++ b/assignments/assignment-4/styles/calc_style.css
@@ -15,8 +15,9 @@ main{
     margin:.5rem;
     display :grid;
     align-items: center;
-    width: 800px;
-    height:1000px;
+    width:100%;
+    max-width: 800px;
+    max-height:1000px;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap:.5rem;
@@ -53,8 +54,8 @@ main{
    justify-content: center;
    color:white;
    border-radius: 50%;
-   width: 1.75rem;
-   height:1.75rem;
+   min-width: 1rem;
+   min-height:1rem;
    background-color: grey;
    padding: 40px;
    font-size: 3rem;
@@ -73,8 +74,8 @@ main{
     border-radius: 50%;
     background-color: rgb(44, 43, 43);
     padding: 40px;
-    width:1.75rem;
-    height:1.75rem;
+    max-width:1.75rem;
+    max-height:1.75rem;
     font-size: 3rem;
 }
 .num:active{
@@ -89,8 +90,8 @@ main{
     border-radius: 50%;
     background-color: darkorange;
     padding: 40px;
-    width:1.75rem;
-    height:1.75rem;
+    max-width:1.75rem;
+    max-height:1.75rem;
     font-size: 3rem;
 }
 .action:active{
