--- a/assignments/assignment-4/styles/calc_style.css
+++ b/assignments/assignment-4/styles/calc_style.css
@@ -15,6 +15,16 @@ main{
     justify-content: center;
 }
 
+header>a{
+    width:60px;
+    height: 100px;
+    margin-top:10px;
+    padding:20px;
+    color:white;
+    background-color: darkorange;
+    border-radius: 10px;
+}
+
 
 .calculator{
     margin:.5rem;
