--- a/assignments/assignment-4/styles/calc_style.css
+++ b/assignments/assignment-4/styles/calc_style.css
@@ -153,6 +153,11 @@ header>a{
     background-color: rgb(252, 165, 58);
 }
 
+footer{
+    background-color: black;
+    color:white;
+}
+
 @media (max-width:465px){
     .calculator{
         grid-column-gap: .1rem;
