added calculator files

--- a/assignments/final-project/styles/ai-1.css
+++ b/assignments/final-project/styles/ai-1.css
@@ -34,6 +34,7 @@ a:hover {
 
 .rounded {
     border-radius: 50%;
+    width:30 px;
 }
 
 /* ---------------------------------------------------------------------
